Fix: Use 3d translations to prevent blurry icons in toolbar on Firefox.

--- a/packages/ckeditor5-ui/theme/components/icon/icon.css
+++ b/packages/ckeditor5-ui/theme/components/icon/icon.css
@@ -11,6 +11,9 @@ svg.ck-icon {
 	/* Inherit cursor style (#5). */
 	cursor: inherit;
 
+	/* This will prevent blurry icons on Firefox. See #340. */
+	will-change: transform;
+
 	& * {
 		/* Inherit cursor style (#5). */
 		cursor: inherit;
